--- a/css/menu.css
+++ b/css/menu.css
@@ -67,7 +67,7 @@ header #header {
 .menu-toggle__bar1, .menu-toggle__bar2, .menu-toggle__bar3 {
   width: 21px;
   height: 3px;
-  background-color: #000000;
+  background-color: var(--menu-toggle__bar, #000000);
   margin: 4px 0;
   transition: 0.3s; 
 }
