--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,8 +7,8 @@
 }
 
 @media only screen and (max-width: 992px) {
-	h1 { font-size: var(--h1-fs-tablet); font-weight: 700; }
-	h2 { font-size: var(--h2-fs-tablet); font-weight: 700; }
+	h1 { font-size: var(--h1-fs-tablet); }
+	h2 { font-size: var(--h2-fs-tablet); }
 	#logo a { font-size: 4vw; }
 	.row { flex-direction: column; 	}
 	.column.col-2 { width: 100%; }
@@ -18,8 +18,8 @@
 }
 
 @media only screen and (max-width: 767px) {
-	h1 { font-size: var(--h1-fs-mobile); font-weight: 700; }
-	h2 { font-size: var(--h2-fs-mobile); font-weight: 700; }
+	h1 { font-size: var(--h1-fs-mobile); }
+	h2 { font-size: var(--h2-fs-mobile); }
 	a, a:visited, p { font-size: 1em;}
 	#logo a { font-size: 7vw; }
 	.column.col-4 { flex-basis: 100%; display: block; }
